--- a/examples/getting-started/demo/server/trezoakora.toml
+++ b/examples/getting-started/demo/server/trezoakora.toml
@@ -25,8 +25,8 @@ max_signatures = 10
 price_source = "Mock"
 allowed_programs = [
     "11111111111111111111111111111111",             # System Program
-    "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",  # Token Program
-    "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL", # Associated Token Program
+    "4JkrrPuuQPxDZuBW1bgrM1GBa8oYg1LxcuX9szBPh3ic",  # TPL Token Program
+    "6DoB1tTP1akxjsui6wS6Jrk8Mju5tz7Fwc8g16ronQHe", # TPL Associated Token Program
     "AddressLookupTab1e1111111111111111111111111",  # Address Lookup Table Program
     "MemoSq4gqABAXKb96qnH8TysNcWxMyWCqXgDLGmfcHr",  # Memo Program
     "ComputeBudget111111111111111111111111111111",  # Compute Budget Program
