--- a/examples/x402/demo/trezoakora/trezoakora.toml
+++ b/examples/x402/demo/trezoakora/trezoakora.toml
@@ -28,16 +28,16 @@ max_signatures = 10
 price_source = "Mock"
 allowed_programs = [
     "11111111111111111111111111111111",            # System Program
-    "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA", # Token Program
+    "4JkrrPuuQPxDZuBW1bgrM1GBa8oYg1LxcuX9szBPh3ic", # TPL Token Program
     # "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",  # Token-2022 Program
-    "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL", # Associated Token Program
+    "6DoB1tTP1akxjsui6wS6Jrk8Mju5tz7Fwc8g16ronQHe", # TPL Associated Token Program
     "ComputeBudget111111111111111111111111111111",  # Compute Budget Program
 ]
 allowed_tokens = [
-    "4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU", # USDC devnet
+    "EFewYfHeQhkKpbDzpmyygdT54hn85dUj3VZ8b7dC21KS", # Trezoa USDC
 ]
 allowed_tpl_paid_tokens = [
-    "4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU", # USDC devnet
+    "EFewYfHeQhkKpbDzpmyygdT54hn85dUj3VZ8b7dC21KS", # Trezoa USDC
 ]
 
 disallowed_accounts = []
