--- a/trezoakora.toml
+++ b/trezoakora.toml
@@ -29,13 +29,13 @@ price_source = "Mock"
 
 allowed_programs = [
     "11111111111111111111111111111111",              # System Program
-    "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",   # Token Program
-    "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL",  # Associated Token Program
+    "4JkrrPuuQPxDZuBW1bgrM1GBa8oYg1LxcuX9szBPh3ic",   # TPL Token Program (OFICIAL)
+    "6DoB1tTP1akxjsui6wS6Jrk8Mju5tz7Fwc8g16ronQHe",  # TPL Associated Token Program (OFICIAL)
     "AddressLookupTab1e1111111111111111111111111",   # Address Lookup Table Program
     "ComputeBudget111111111111111111111111111111", # Compute Budget Program
 ]
 allowed_tokens = [
-    "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v", # USDC
+    "EFewYfHeQhkKpbDzpmyygdT54hn85dUj3VZ8b7dC21KS", # USDC 
 ]
 allowed_tpl_paid_tokens = []
 #allowed_tpl_paid_tokens = "All"  # Allow any token to be used for payment,
